# rust_pgn_reader_python_binding

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust_pgn_reader_python_binding.pyi
.github/workflows/: CI.yml
benches/: parquet_bench.rs
python/: __init__.py  wrapper.py
src/: bench.py  bench_data_access.py  bench_parquet.py  bench_parquet_arrow.py  bench_parquet_parallel.py  bench_parse_game.py  bench_parse_game_pgn.py  bench_parse_games.py  bench_parse_games_flat.py  bench_parse_games_from_strings.py  bench_parse_games_singlethreaded.py  bench_parse_pgn.py  board_serialization.rs  comment_parsing.rs  compare_reference.py  dump_reference.py  example.py  example_chess960.py  example_complex.py  example_parse_games.py  example_parse_games_flat.py  example_rowgroup.py  example_str.py  flat.rs  flat_visitor.rs  lib.rs  python_bindings.rs  reference_lib.py  test.py  tokenizer.rs  visitor.rs
