[package]
name = "rust_pgn_reader_python_binding"
version = "2.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pgn_reader_python_binding"
crate-type = ["lib", "cdylib"]
# lib is needed for the native benchmark

[dependencies]
pyo3 = "0.25.0"
shakmaty = "0.27"
pgn-reader = "0.26.0"
nom = "8.0"
rayon = "1.10"
num_cpus = "1.17"

[dev-dependencies]
criterion = "0.6"
parquet = "55"
arrow = "55"

[[bench]]
harness = false
name = "parquet_bench"

