[package]
name = "rust_pgn_reader_python_binding"
version = "3.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pgn_reader_python_binding"
crate-type = ["lib", "cdylib"]
# lib is needed for the native benchmark

[dependencies]
pyo3 = "0.25.1"
shakmaty = "0.29"
pgn-reader = "0.28.0"
nom = "8.0"
rayon = "1.10"
num_cpus = "1.17"
arrow-array = "55"
pyo3-arrow = "0.10"

[dev-dependencies]
criterion = "0.6"
parquet = "55"
arrow = "55"

[[bench]]
harness = false
name = "parquet_bench"

[profile.bench]
debug = true
