[package]
name = "rust_pgn_reader_python_binding"
version = "3.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_pgn_reader_python_binding"
crate-type = ["lib", "cdylib"]
# lib is needed for the native benchmark

[dependencies]
pyo3 = "0.27.2"
shakmaty = "0.30"
pgn-reader = "0.29.0"
nom = "8.0"
rayon = "1.11"
num_cpus = "1.17"
arrow-array = "57"
pyo3-arrow = "0.15"
numpy = "0.27"
parquet = "57"
arrow = "57"

[dev-dependencies]
criterion = "0.8"

[[bench]]
harness = false
name = "parquet_bench"

[profile.bench]
debug = true
